objects/reCaptchaGoogle__c/reCaptchaGoogle__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>reCaptchaGoogle</label>
</CustomObject>