objects/reCaptchaGoogle__c/fields/endPoint__c.field-meta.xml
<CustomField>
    <fullName>endPoint__c</fullName>
    <label>endPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>