objects/reCaptchaGoogle__c/fields/libraryUrl__c.field-meta.xml
<CustomField>
    <fullName>libraryUrl__c</fullName>
    <label>libraryUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>