objects/reCaptchaGoogle__c/fields/siteKey__c.field-meta.xml
<CustomField>
    <fullName>siteKey__c</fullName>
    <label>siteKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>